@@ -1,7 +1,7 @@
 # -*- mode: cperl;-*-
 # $Id: 01_mime.t,v 1.1 2005/08/17 21:46:17 don Exp $
 
-use Test::More tests => 4;
+use Test::More tests => 5;
 
 use warnings;
 use strict;
@@ -17,6 +17,9 @@ my $test_str = <<'END';
 Döñ Ärḿßtrøñĝ <don@donarmstrong.com>
 END
 
+my $test_str2 = <<'END';
+ Döñ Ärḿßtrøñĝ <don@donarmstrong.com>
+END
 
 # 1: test decode
 ok(Debbugs::MIME::decode_rfc1522(q(=?iso-8859-1?Q?D=F6n_Armstr=F3ng?= <don@donarmstrong.com>)) eq
@@ -26,6 +29,9 @@ ok(Debbugs::MIME::decode_rfc1522(q(=?iso-8859-1?Q?D=F6n_Armstr=F3ng?= <don@donar
 # 2: test encode
 ok(Debbugs::MIME::decode_rfc1522(Debbugs::MIME::encode_rfc1522($test_str)) eq $test_str,
   "encode_rfc1522 encodes strings that decode_rfc1522 can decode");
+ok(Debbugs::MIME::decode_rfc1522(Debbugs::MIME::encode_rfc1522($test_str2)) eq $test_str2,
+  "encode_rfc1522 encodes strings that decode_rfc1522 can decode");
+
 
 # Make sure that create_mime_message has encoded headers and doesn't enclude any 8-bit characters
 
